--- a/style.css
+++ b/style.css
@@ -1,76 +1,78 @@
+body {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+  font: 14px 'Istok Web', sans-serif;
+  color: #333333;
+  text-shadow: 0 1px 0 white;
+  background: white;
+  overflow: hidden;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
 
-body {padding: 0; margin: 0; overflow: hidden;}
-#canvas {background: black;}
+* {
+  margin: 0;
+  padding: 0; }
 
-#menu, #reMenu {
-	position: absolute;
-	z-index: 1;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background: black;
-}
+a {
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+  border-bottom: 1px dotted rgba(0, 0, 0, 0.2);
+  display: inline-block;
+  height: 17px; }
 
-#reMenu {background: transparent;}
+a:hover {
+  border-bottom-style: solid; }
 
-h1, p, a {
-	position: relative;  
-	z-index: 1; 
-	font: 72px "Press Start 2P", cursive;
-	color: white;
-	text-align: center;
-	margin: 0;
-}
+#canvas-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  overflow: hidden; }
 
-a{
-	font-size : 16px; 
-	margin: 0;
-	display: inline-block;
-	position: relative;
-	left: 0;
-}
+#container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0; }
 
-h1 {margin-top: 5%;}
+small {
+  font-style: italic;
+  font-size: 11px; }
 
-p {
-	font-size: 16px;
-	margin-top: 10px;
-	padding-left: 200px;
-}
+.showing-experiment #ce-logo {
+  opacity: 0.1; }
 
-a#start, a#restart, a#tweet, p#loading {
-	font-size: 24px;
-	display: block;
-	width: 120px;
-	top: 30%;	
-	left: 0; 
-	border-top: 5px solid white;
-	border-bottom: 5px solid white;
-	padding: 10px;
-	text-decoration: none;
-	margin: 0 auto; 
-}
-
-a#restart {width: 165px; top: 20%}
-
-a#tweet {top: 25%; width: 342px;}
-
-#score {
-	bottom: 10px;
-	position: absolute;
-	z-index: 1;
-	padding-left: 10px;
-	font-size: 16px;
-}
-
-p#loading {
-	border: none;
-	font-size: 16px;
-	top: 20%;
-	width: 200px;
-}
-
-a#start{top: 100%;}
-
-#info2 {padding : 0;}
+#ce-logo {
+  pointer-events: all;
+  transition: opacity 0.1s;
+  -moz-transition: opacity 0.1s;
+  -webkit-transition: opacity 0.1s;
+  -o-transition: opacity 0.1s;
+  -ms-transition: opacity 0.1s;
+  /*background: url(images/chromeexperiment.png);*/
+  font-family: Arial, sans-serif;
+  font-weight: normal;
+  font-size: 22px;
+  text-align: right;
+  line-height: 24px;
+  opacity: 0.4;
+  border: none;
+  cursor: pointer;
+  position: absolute;
+  z-index: 9;
+  bottom: 20px;
+  right: 35px;
+  width: 240px;
+  height: 55px; }
+  #ce-logo span {
+    display: block;
+    font-size: 12px;
+    line-height: 18px; }
+  #ce-logo:hover {
+    opacity: 1; }
