--- a/style.css
+++ b/style.css
@@ -44,6 +44,22 @@ a:hover {
 small {
   font-style: italic;
   font-size: 11px; }
+  
+.shout-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 35px;
+    height: 0;
+    overflow: hidden;
+}
+
+.shout-container iframe {
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
 
 .showing-experiment #ce-logo {
   opacity: 0.1; }
