--- a/style.css
+++ b/style.css
@@ -47,8 +47,8 @@ small {
   
 .shout-container {
     position: relative;
-    padding-bottom: 56.25%;
-    padding-top: 35px;
+    padding-bottom: 0px;
+    padding-top: 0px;
     height: 0;
     overflow: hidden;
 }
